<resources>
    <string name="app_name">NewSilkRoad</string>
    <string name="tag_hint">Tag is letter,number,underline</string>
    <string name="alias_hint">Alias is letter,number,underline</string>
    <string name="style_hint">style is numeber</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Format is Wrong</string>
    <string name="error_network">Abnormal network connections, initialization failed,please check</string>
    <string name="logining">Program is executed in background,please check journal!</string>
    <string name="setting_su">Set up Successfully</string>
    <string name="ok">OK</string>
    <string name="netLoading">Communicating...</string>
    <string name="networkError">Network Error</string>
    <string name="networkUnavailable">Network is not available,please connect.</string>
    <string name="_fragment_menpiao">Ticket</string>
    <string name="_fragment_meishi">Gourmet</string>
    <string name="_fragment_youji">Journey</string>
    <string name="_fragment_zutuanyou">GroupTour</string>
    <string name="_fragment_daoyou">Guide</string>
    <string name="_fragment_lvxingshe">TravelAgency</string>
    <string name="_fragment_guoneiyou">DomesticTours</string>
    <string name="_fragment_chujingyou">OverseasTours</string>
    <string name="_login_denglu">Login</string>
    <string name="_login_regist">Sign Up</string>
    <string name="_activity_ticket_btn_buy">Buy Now</string>
    <string name="_activity_group_tour_info_details">组团详情</string>
    <string name="_info_details">Information</string>
    <string name="_activity_every_goods_comment">Comments</string>
    <string name="_change_place">Choose Area</string>
    <string name="_textview_location">Location</string>
    <string name="_fragment_mall">Mall</string>
    <string name="_fragment_mall_sort">Classification</string>
    <string name="_search">Search</string>
    <string name="_activity_sort_goods_fenlei">Sales</string>
    <string name="_activity_sort_goods_goodslist">Item List</string>
    <string name="_activity_sort_goods_paixu">Price</string>
    <string name="_activity_sort_goods_chandi">ProducingArea</string>
    <string name="_change_fenlei">Choose Classification</string>
    <string name="_activity_mall_sort_goodssort">Items Classification</string>
    <string name="_activity_login_exit_pas">Input Password</string>
    <string name="_activity_login_exit_user">Input Name/Mobile Number</string>
    <string name="_register_nickname">Input Nick Name</string>
    <string name="_register_edit_pasagain">Password Again</string>
    <string name="_check_text">You have read and Agree with relations.</string>
    <string name="_check_right_text">Service Item</string>
    <string name="_activity_food">Gourmet</string>
    <string name="_shopping_car">Shopping Cart</string>
    <string name="_allsales">Total Sales:</string>
    <string name="__fragment_personal_my_order">Your Order</string>
    <string name="_dujiatuijian">Exclusive</string>
    <string name="_jixuhuadongjiazai">Slipping Load More</string>
    <string name="_techantuijianpang">Recommend Speciality</string>
    <string name="_meirizhekou">Discount</string>
    <string name="_meirituijian">Recommended</string>
    <string name="_meirixinpin">New</string>
    <string name="_meiritemai">Sales</string>
    <string name="_yinlian">UnionPay</string>
    <string name="_changePayWay">choose Payment methods</string>
    <string name="_stateOfPay">Payment Methods</string>
    <string name="_shouhuoren">Receiving Name:</string>
    <string name="_shouhuodizhi">Receiving Adress:</string>
    <string name="_adressmanage">Adress Management</string>
    <string name="_aboutsoft">About Software</string>
    <string name="_chang_an">Changan</string>
    <string name="_my_collection">Collection</string>
    <string name="_info_alter">Modification</string>
    <string name="_head_image">Portrait</string>
    <string name="_nickname">NickName</string>
    <string name="_address_manager">Adress Management</string>
    <string name="_email">Mailbox</string>
    <string name="_input_email">Your Mailbox</string>
    <string name="__password_alter">Edit</string>
    <string name="_save">Conserve</string>
    <string name="_select_num">Choose Quatity</string>
    <string name="_ok">Confirm</string>
    <string name="_prime_cost">Cost Price:</string>
    <string name="_Total_sales">Total Sales:</string>
    <string name="_total_judge">Comments:</string>
    <string name="_view_sort">Check Classification</string>
    <string name="_view_content_detail">Check Informations of Web</string>
    <string name="_user_judge">Consumer Comments</string>
    <string name="_shopping_cart">Add to Cart</string>
    <string name="_buy_now">Buy Now</string>
    <string name="_select_address">Choose Address</string>
    <string name="_your_site">Provinces,cities and autonomous regions</string>
    <string name="_input_site">Input Provinces,cities and autonomous regions </string>
    <string name="_your_city">City</string>
    <string name="_input_location">Input Area</string>
    <string name="_your_location">Location</string>
    <string name="_input_area">Input Location</string>
    <string name="_address_detail">Detailed Address</string>
    <string name="_input_address_detail">Input Detailed Address</string>
    <string name="_recevier">Receiving Name：</string>
    <string name="_input_recevier">Input Receiving Name</string>
    <string name="_contact_info">Mobile</string>
    <string name="_input_contact_info">Input Mobile Number</string>
    <string name="_password_alter">Edit Password</string>
    <string name="_password_old">Original</string>
    <string name="_input_password_old">Input Original Password</string>
    <string name="_password_new">New</string>
    <string name="_input_pasword_new">Input New Password</string>
    <string name="_password_confir">Confirm</string>
    <string name="_input_again">Input Again</string>
    <string name="_food_detail">Gourmet Information</string>
    <string name="_newsilkroad_museum">New Silk Road Museum</string>
    <string name="_museum_detail">Silk Road Museum Information</string>
    <string name="_ningxia_address">宁夏银川市西夏区宁安大街</string>
    <string name="_price">Price</string>
    <string name="_silkroad_recom">Recommdation</string>
    <string name="_helanshan">贺兰山</string>
    <string name="_travel_yinchuan">游银川</string>
    <string name="_travel_xi_an">游西安</string>
    <string name="_travel_xinjiang">游新疆</string>
    <string name="_travel_arab">游阿拉伯</string>
    <string name="_travel_Turpan">游吐鲁番</string>
    <string name="_travel_roman">游罗马</string>
    <string name="_travel_loulan">游古楼兰</string>
    <string name="_travel_chifeng">游赤峰</string>
    <string name="_travel_changan">游长安</string>
    <string name="_travel_hami">游哈密</string>
    <string name="_travel_huoyanshan">游火焰山</string>
    <string name="_travel_dizhonghai">游地中海</string>
    <string name="_tour_detail">游记详情</string>
    <string name="_road">线路：宁夏-上海-北京-东北</string>
    <string name="_newsilleroad">New Silk Road</string>
    <string name="_my_order">Your Orders</string>
    <string name="_all_order">All</string>
    <string name="_pay_order">Paid</string>
    <string name="_no_pay_order">Unpaid</string>
    <string name="_none_order">You have no orders, go!!!</string>
    <string name="_order_detail">Orders Detail</string>
    <string name="_order_finish">Condition:Finished：</string>
    <string name="_order_number">Merchant：</string>
    <string name="_recevice_address">Adress:</string>
    <string name="_order_goods_detail">Items Information</string>
    <string name="_fare">Cost：</string>
    <string name="_fact_pay">Payment：</string>
    <string name="_saler_info">Sellers Information:The New Silk Road</string>
    <string name="_contact_saler">Contact Seller</string>
    <string name="_delete_order">Delet Order</string>
    <string name="_view_logistics">Logistics</string>
    <string name="_order_confir">Confirm</string>
    <string name="_totail">Total:</string>
    <string name="_buy_confir">Confirm</string>
    <string name="_goods_name">Names：</string>
    <string name="_loco">Location of Sale：</string>
    <string name="_goods_unit_price">Price：</string>
    <string name="_buy_num">Amount:</string>
    <string name="_zhifubao_pay">Alipay</string>
    <string name="_weichat_pay">微信支付</string>
    <string name="_offline_deal">Off-line Trade</string>
    <string name="_info_show">showing</string>
    <string name="_history">History</string>
    <string name="_delete">Delet</string>
    <string name="_edit">Edit</string>
    <string name="_select_all">All</string>
    <string name="_total">Total:</string>
    <string name="_account">Account</string>
    <string name="_judge">Comment:</string>
    <string name="_judge_number">0</string>
    <string name="_beike_dream_world">贝壳梦幻世界</string>
    <string name="_ticket_detail">Information of Ticket </string>
    <string name="_adult_ticket">成人票</string>
    <string name="_family_ticket">家庭票</string>
    <string name="_bespoke">立即预约</string>
    <string name="_self_service_tour">精品自助游</string>
    <string name="_group_tour">精品跟团游</string>
    <string name="_tour_notes">游记</string>
    <string name="_item_data">Item data</string>
    <string name="_freshen_data">Refreshing data…</string>
    <string name="_sopping_city">Mall</string>
    <string name="_cultrue">Culture</string>
    <string name="_person">People</string>
    <string name="_loacl_image">Album</string>
    <string name="_take_photo">Camera</string>
    <string name="_cancle">Cancel</string>
    <string name="_publisher">Publisher:The New Silk Road</string>
    <string name="_atte_rate">Attention：</string>
    <string name="_cultrue_spread">Culture communication</string>
    <string name="_product_recom">Introduction</string>
    <string name="_more_recom">More</string>
    <string name="_recom_buy">You have no orders, go!!!</string>
    <string name="_payed">Paid</string>
    <string name="_black_figure">Balance：￥</string>
    <string name="_cart">ShoppingCart</string>
    <string name="_view_collection_list">your Collection</string>
    <string name="_tour_collection">旅游收藏</string>
    <string name="_shopping_collection">商城收藏</string>
    <string name="_view_my_cart">Your Cart</string>
    <string name="_view_all_order">All Orders</string>
    <string name="_tour_guide">Guide</string>
    <string name="_silp_more">Slid Loading More</string>
    <string name="_high_function">Advanced Functiopn</string>
    <string name="_set_tag_alias_">"设置Tag和Alias "</string>
    <string name="_tag_">" Tag :"</string>
    <string name="_set_tag_">"设置Tag  "</string>
    <string name="_alias_">Alias:</string>
    <string name="_set_alias">设置Alias</string>
    <string name="_set_tongzhi_style">定制通知栏样式</string>
    <string name="_tongzhi_stylebasic">定制通知栏样式：Basic</string>
    <string name="_tongzhi_style_custom">定制通知栏样式：Custom</string>
    <string name="_set">Set Up Tag</string>
    <string name="_set_push_time">设置接收push时间</string>
    <string name="_add_recevie_address">Add Address</string>
    <string name="_manager_recevice_address">Manage Address</string>
    <string name="_check_internet">Please check network and Try Again.</string>
    <string name="_faile">Fail!</string>
    <string name="_web_info">Web Info</string>
    <string name="_quedingshouhuo">Confirm receipt</string>
    <string name="_lijizhifu">Pay</string>
    <string name="_imb"><Data><![CDATA[<font color="#f15087"><b>￥</b></font>]]></Data></string>
    <string name="_adress_mange_activity_tv_one">Only 10 tips.</string>
    <string name="_every_good_activity_tv_one">Failed</string>
    <string name="_every_good_activity_tv_two">Done</string>
</resources>