<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="49.5dp"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/img_activity_fix_adress_back"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/nav_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/_select_address"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/_your_site" />

            <EditText
                android:id="@+id/et_sheng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_input_site" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/_your_city"
                android:textColor="@color/small_title" />

            <EditText
                android:id="@+id/et_diqu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_input_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/_your_location"
                android:textColor="@color/small_title" />

            <EditText
                android:id="@+id/et_jiedao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_input_area" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/_address_detail"
                android:textColor="@color/small_title" />

            <EditText
                android:id="@+id/et_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_input_address_detail" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/_recevier"
                android:textColor="@color/small_title" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_input_recevier" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/_contact_info"
                android:textColor="@color/small_title" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_input_contact_info"
                android:inputType="phone" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp" >

        <ImageView
            android:id="@+id/img_activity_fix_adress_detele"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/detele" />

        <TextView
            android:id="@+id/tv_activity_fix_adress_fix"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="#368ff7"
            android:gravity="center"
            android:text="@string/_save"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>