<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="49.5dp"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:src="@drawable/nav_back" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/_fragment_zutuanyou"
            android:textColor="#000000"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ima_sousuotubiao" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/lines"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_yinchuan"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_xi_an"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_xinjiang"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_arab"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/lines"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_Turpan"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_roman"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_loulan"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_chifeng"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_changan"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_hami"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_huoyanshan"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tiaoright"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/_travel_dizhonghai"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.fangshuoit.view.MyGridView
                android:id="@+id/gv_group_tour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="1" >
            </com.fangshuoit.view.MyGridView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>