<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/tiledstripes" >

    <LinearLayout  android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#9C9C9C"
            android:orientation="vertical"
            android:padding="10dip" >

         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_set_tag_alias_"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="20dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_tag_" />

                <EditText
                    android:id="@+id/et_tag"
                    style="@style/push_tag"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/bt_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_set_tag_"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_alias_" />

                <EditText
                    android:id="@+id/et_alias"
                    style="@style/push_alias"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/bt_alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_set_alias"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="#9C9C9C"
            android:orientation="vertical"
             android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_set_tongzhi_style"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/setStyle1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/_tongzhi_stylebasic" />

            <Button
                android:id="@+id/setStyle2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/_tongzhi_style_custom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="#9C9C9C"
            android:orientation="vertical"
            android:padding="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_set"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:background="@drawable/corners_bg"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingTop="10dip" >
            <Button
                android:id="@+id/bu_setTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/_set_push_time" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>