<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="1000dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dip" >

        <Button
            android:id="@+id/choose_album"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/basic_btn"
            android:text="@string/_loacl_image"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/choose_cam"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/basic_btn"
            android:text="@string/_take_photo"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/choose_cancel"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/basic_btn"
            android:text="@string/_cancle"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>