<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="5dp"
            android:layout_height="fill_parent"
            android:background="#248bfe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/_order_number"
            android:textColor="@color/taobaotext"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_fragment_myorder_list_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/app_name"
            android:textColor="@color/taobaotext"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_fragment_myorder_list_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:text="@string/_payed"
            android:textColor="@color/taobaotext"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#eeeeee" />

    <LinearLayout
        android:id="@+id/ly_fragment_myorder_listcell"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>